# CastVolume

./: .gitignore  README.md  castvolume.desktop  castvolume.py  pyproject.toml  setup.py
tests/: castlist.py  casttheriver.py  mixer.py  t.py  t2.py  tkvol.py
