[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name         = "CastVolume"
version      = "0.0.2"
description  = "Simple Chromecast Audio volume control."
readme       = "README.md"
authors      = [
    {name = "Jeremy Goss", email = "jem@goss-family.net"}
]
requires-python = ">=3.12.0"
dependencies = [
    "PyChromecast",
]
classifiers=[
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]

[project.urls]
"Homepage" = "https://github.com/jemgoss/CastVolume"
